statum-macros/tests/ui/invalid_machine_not_struct.rs
extern crate statum;
use statum::machine;
#[machine]
enum NotAStruct {
    Variant,
}
